[project]
name = "chartographer"
version = "0.1.0"
description = "LLM powered mindmap generator for documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.100.2",
    "python-dotenv>=1.1.1",
    "click>=8.1.0",
    "fuzzywuzzy>=0.18.0",
]

[project.scripts]
chartographer = "chartographer.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["chartographer*"]
